--- a/TP_Complejidad_final.ipynb
+++ b/TP_Complejidad_final.ipynb
@@ -10,7 +10,8 @@
       "source": [
         "import graphviz as gv\n",
         "import numpy as np\n",
-        "import csv"
+        "import csv\n",
+        "import math"
       ]
     },
     {
@@ -71,7 +72,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def lenght(x, y, x1, y1):\n",
+        "  d = math.sqrt((x-x1)**2+(y-y1)**2)\n",
+        "  return d*100000"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -79,35 +91,29 @@
         "id": "vhxJwPc82tIU",
         "outputId": "c8c7c05c-974c-46fc-d0a8-891727f99076"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "[[0 1 0 ... 0 0 0]\n",
-            " [1 0 0 ... 0 0 0]\n",
-            " [0 0 0 ... 1 0 0]\n",
-            " ...\n",
-            " [0 0 1 ... 0 0 0]\n",
-            " [0 0 0 ... 0 0 1]\n",
-            " [0 0 0 ... 0 1 0]]\n",
-            "100\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "matriz=[]\n",
         "m=[]\n",
-        "\n",
-        "for nodo in nodos:\n",
-        "  for node in nodos:\n",
-        "    if nodo[0] == node[0] or nodo[0] == node[1] or nodo[1] == node[0] or nodo[1] == node[1]:\n",
-        "      if nodo == node:\n",
-        "        m.append(0)\n",
-        "      else:\n",
-        "        m.append(1)\n",
-        "    else:\n",
-        "      m.append(0)\n",
+        "cont = 0\n",
+        "flag0 = True\n",
+        "flag1 = True\n",
+        "for i in range(len(nodos) - 1):\n",
+        "  for j in range(i , len(nodos) - 1):\n",
+        "    #while(cont < 2):\n",
+        "      if flag0 and nodos[i][0] == (nodos[j + 1][0] or nodos[j + 1][1]):\n",
+        "        d = lenght(nodos[i][2], nodos[i][3],nodos[j + 1][2], nodos[j + 1][3])\n",
+        "        m.append([j + 1,d])\n",
+        "        flag0 = False\n",
+        "      if flag1 and nodos[i][1] == (nodos[j + 1][1] or nodos[j + 1][0]):\n",
+        "        d = lenght(nodos[i][2], nodos[i][3],nodos[j + 1][2], nodos[j + 1][3])\n",
+        "        m.append([j + 1,d])\n",
+        "        flag1 = False\n",
+        "      #m.append(0)\n",
+        "     # cont += 1\n",
+        "    #cont = 0\n",
+        "  flag0 = True\n",
+        "  flag1 = True\n",
         "  matriz.append(m)\n",
         "  m=[]\n",
         "\n",
@@ -167,7 +173,15 @@
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
       "version": "3.10.1"
     },
     "vscode": {
