--- a/TP_Complejidad_final.ipynb
+++ b/TP_Complejidad_final.ipynb
@@ -10,6 +10,7 @@
       "source": [
         "import graphviz as gv\n",
         "import numpy as np\n",
+        "import heapq as hq\n",
         "import csv\n",
         "import math"
       ]
@@ -79,6 +80,61 @@
         "def lenght(x, y, x1, y1):\n",
         "  d = math.sqrt((x-x1)**2+(y-y1)**2)\n",
         "  return d*100000"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def dijkstra(G, s, e):\n",
+        "  n = len(G)\n",
+        "  visited = [False]*n\n",
+        "  path = [-1]*n\n",
+        "  cost = [math.inf]*n\n",
+        "\n",
+        "  cost[s] = 0\n",
+        "  pqueue = [(0, s)]\n",
+        "  while pqueue:\n",
+        "    g, u = hq.heappop(pqueue)\n",
+        "    if not visited[u]:\n",
+        "      visited[u] = True\n",
+        "      for v, w in G[u]:\n",
+        "        if not visited[v]:\n",
+        "          f = g + w\n",
+        "          if f < cost[v]:\n",
+        "            cost[v] = f\n",
+        "            path[v] = u\n",
+        "            hq.heappush(pqueue, (f, v))\n",
+        "\n",
+        "  return path, cost"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "nPath = []\n",
+        "def obtenerPath(i, path):\n",
+        "  if (i == -1):\n",
+        "    return  \t\n",
+        "  obtenerPath(path[i], path)             \n",
+        "  nPath.append(i) "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def solve(G, s, e):\n",
+        "  Opath, cost = dijkstra(G, s, e)\n",
+        "  obtenerPath(e, Opath)\n",
+        "  return nPath"
       ]
     },
     {
